Enhance migration playbooks with concrete patterns from Phase 0/1 execution
All 11 playbooks enriched with:
- Specific file lists from source scans (e.g. 5 Hibernate ejb files in profile, 21 TL3 processors in framework-web)
- Concrete before/after code examples for every API migration pattern
- Build infrastructure fixes every module needs (javax.annotation-api, junit-vintage-engine, --add-opens)
- Gotchas discovered during execution (JaCoCo 0.8.11, JUnit Platform alignment, TL3 setElementTagName removal)
- Phase 0 and Phase 1 marked as Complete with execution results
- README updated with lessons learned section and phase status tracking