@@ -1,32 +1,102 @@
 # Phase 2a - broadleaf-profile
 
+**Status:** Pending
+
 ## Target Module
 
 `core/broadleaf-profile/` (`org.broadleafcommerce:broadleaf-profile`)
 
 ## Prerequisites
 
-- Phase 1 (broadleaf-common) complete
+- Phase 1 (broadleaf-common) complete and merged
+
+## Environment Setup
+
+```bash
+export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+export PATH=$JAVA_HOME/bin:$PATH
+```
 
 ## Dependency / Version Edits
 
-- Verify all Hibernate / Spring / Thymeleaf versions resolve from parent
-- Remove any module-level overrides for removed dependencies (asm, cglib, hibernate-jpa-2.0-api)
+Add to `core/broadleaf-profile/pom.xml`:
+
+```xml
+<dependency>
+    <groupId>javax.annotation</groupId>
+    <artifactId>javax.annotation-api</artifactId>
+</dependency>
+<dependency>
+    <groupId>org.junit.vintage</groupId>
+    <artifactId>junit-vintage-engine</artifactId>
+    <version>5.10.2</version>
+    <scope>test</scope>
+</dependency>
+```
+
+Add `--add-opens` to surefire `<argLine>` (same pattern as common/pom.xml):
+```
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens java.base/java.util=ALL-UNNAMED
+```
 
 ## Import-Rename Map
 
-| Old Import | New Import |
-|---|---|
-| `org.hibernate.ejb.*` | `org.hibernate.jpa.*` |
-| `org.hibernate.criterion.*` (Criteria) | Migrate to JPA `CriteriaBuilder` / `CriteriaQuery` |
-| `org.thymeleaf.spring4.*` | `org.thymeleaf.spring5.*` |
-| `org.springframework.security.authentication.encoding.*` | `org.springframework.security.crypto.password.*` |
+| Old Import | New Import | Affected Files |
+|---|---|---|
+| `org.hibernate.ejb.*` | `org.hibernate.jpa.*` | ChallengeQuestionDaoImpl, CustomerDaoImpl, CountryDaoImpl, CountrySubdivisionDaoImpl, StateDaoImpl |
+| `org.springframework.security.authentication.encoding.PasswordEncoder` | `org.springframework.security.crypto.password.PasswordEncoder` | CustomerService, CustomerServiceImpl |
+
+## Identified Files Requiring Changes
+
+From source scan (5 files with `org.hibernate.ejb` imports):
+1. `profile/core/dao/ChallengeQuestionDaoImpl.java` - Hibernate ejb -> jpa
+2. `profile/core/dao/CustomerDaoImpl.java` - Hibernate ejb -> jpa
+3. `profile/core/dao/CountryDaoImpl.java` - Hibernate ejb -> jpa
+4. `profile/core/dao/CountrySubdivisionDaoImpl.java` - Hibernate ejb -> jpa
+5. `profile/core/dao/StateDaoImpl.java` - Hibernate ejb -> jpa
+
+From source scan (2 files with old PasswordEncoder):
+6. `profile/core/service/CustomerService.java` - PasswordEncoder interface change
+7. `profile/core/service/CustomerServiceImpl.java` - PasswordEncoder implementation change
 
 ## Key Refactoring Tasks
 
-- `PasswordEncoder` migration: Spring Security 5.x removed the old `PasswordEncoder` interface from `o.s.s.authentication.encoding`; migrate to `o.s.s.crypto.password.PasswordEncoder`
-- Hibernate `Session.createCriteria()` deprecation: replace with JPA criteria API where used in DAOs
-- Review `CustomerService` and `RoleService` for Spring Security API changes
+### 1. Hibernate ejb -> jpa (Simple Rename)
+
+Same pattern as Phase 1. These are typically just import renames:
+```java
+// OLD:
+import org.hibernate.ejb.QueryHints;
+// NEW:
+import org.hibernate.jpa.QueryHints;
+```
+
+### 2. PasswordEncoder Migration
+
+Spring Security 5.x completely removed the old `PasswordEncoder` interface from `org.springframework.security.authentication.encoding`. The new interface is `org.springframework.security.crypto.password.PasswordEncoder`.
+
+**Critical difference:** The old interface had `encodePassword(rawPass, salt)` and `isPasswordValid(encPass, rawPass, salt)`. The new interface has `encode(rawPassword)` and `matches(rawPassword, encodedPassword)` (note: parameter order is reversed for the validation method). The new interface handles salting internally (e.g., BCrypt generates its own salt).
+
+```java
+// OLD:
+import org.springframework.security.authentication.encoding.PasswordEncoder;
+passwordEncoder.encodePassword(rawPassword, salt);
+passwordEncoder.isPasswordValid(storedPassword, rawPassword, salt);
+
+// NEW:
+import org.springframework.security.crypto.password.PasswordEncoder;
+passwordEncoder.encode(rawPassword);
+passwordEncoder.matches(rawPassword, storedPassword);  // Note: reversed param order!
+```
+
+### 3. Additional Patterns (from Phase 1 Lessons)
+
+Check for and fix if present:
+- `SCOPE_GLOBAL_SESSION` -> `SCOPE_SESSION` (search all files)
+- `org.springframework.security.web.util.RequestMatcher` -> `org.springframework.security.web.util.matcher.RequestMatcher`
+- Any `HandlerInterceptorAdapter` -> `HandlerInterceptor`
 
 ## Regression Command
 
